# Final-Project-Monte-Carlo-Path-Tracer-with-Microfacet-BSDF

./: .gitignore  CMakeLists.txt  README.md  conf.json  previous_config.json
main_and_models/: Triangle.hpp  main.cpp
src/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Camera.hpp  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  WaveLen.hpp  global.hpp  main.cpp
